<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="E_CameraMode" Id="{b78a306a-3bbf-41d5-a389-e5e8464a110c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_CameraMode :
(
  NoCorrection := 0,   // NoCorrection
  XYR          := 1,   // XYR
  Live         := 2,   // Live deformation
  Trend        := 3,   // Live deformation with trend
  Auto         := 4    // Auto
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>